Added pointer cursor to tile share links closes #109

--- a/assets/src/sass/components/_title-card.scss
+++ b/assets/src/sass/components/_title-card.scss
@@ -97,6 +97,7 @@
             line-height: 1.1875rem;
             margin-right: $base-margin;
             vertical-align: middle;
+            cursor: pointer;
 
             &:last-child {
                 margin-right: 0;
