--- a/assets/src/sass/components/_navigation.scss
+++ b/assets/src/sass/components/_navigation.scss
@@ -21,11 +21,12 @@
     position: relative;
     z-index: 1;
     
-    @include breakpoint($break_tablet) {
+    @include breakpoint($break_tablet_large) {
       float: none;
       display: block;
       width: 100%;
-      margin-bottom: $base-margin*4;
+      max-width: 480px;
+      margin: 0 auto $base-margin*4;
     }
 
     .nav__link {
@@ -55,7 +56,7 @@
         z-index: 1;
       }
 
-      @include breakpoint($break_tablet) {
+      @include breakpoint($break_tablet_large) {
         display: block;
         margin: 0;
         padding: $base-margin*2 $base-margin;
