Updated referral consent page closes #112

--- a/assets/src/sass/base/_typography.scss
+++ b/assets/src/sass/base/_typography.scss
@@ -235,7 +235,7 @@ main {
 
       &:after {
         content: '';
-        background-color: $puerto_rico;
+        background-color: $black;
         position: absolute;
         top: $base-margin*0.5;
         left: 0;
