--- a/assets/src/sass/components/_button.scss
+++ b/assets/src/sass/components/_button.scss
@@ -56,6 +56,7 @@
   &:focus {
     box-shadow: none;
     border-color: $puerto_rico;
+    outline: 0;
   }
 
   &--green {
@@ -102,7 +103,7 @@
       background: $hawkes_blue;
       border: 5px solid $puerto_rico;
       box-shadow: inset 0px 0px 0px 2px $san_juan;
-      padding: 7px 17px;
+      padding: 7px 15px;
 
       &.btn--small {
         padding: $base-margin - 15px $base-margin*1.5 - 14px;
