--- a/assets/src/sass/print.scss
+++ b/assets/src/sass/print.scss
@@ -1,11 +1,9 @@
 // Site specific styling
-.header {
-  display: none !important;
-}
-
+.header,
 .footer,
 .breadcrumbs,
 a[href="#print"],
+.btn,
 .section__anchor,
 .title-card--share,
 .service-feedback,
