--- a/assets/src/sass/forms/toggle.scss
+++ b/assets/src/sass/forms/toggle.scss
@@ -110,9 +110,8 @@
     font-weight: 600;
     content: "\f00c";
     font-size: 1.4rem;
-    line-height: 1.4rem;
     color: $san_juan;
-    margin: 5px;
+    margin: 3px 5px;
   }
 
   input[type="checkbox"] + label span:before,
