--- a/assets/src/sass/forms/select.scss
+++ b/assets/src/sass/forms/select.scss
@@ -4,7 +4,7 @@ select,
 .select {
   width: 100%;
   max-width: 220px;
-  padding: $base-margin*0.5 $base-margin*0.75;
+  padding: $base-margin*0.5 $base-margin*1.5 $base-margin*0.5 $base-margin*0.75;
   border: 2px solid $mid_gray;
   box-shadow: none;
   font-size: 1.1875rem;
