Accessibility: Added skip to content link:

--- a/assets/src/sass/app.scss
+++ b/assets/src/sass/app.scss
@@ -10,6 +10,7 @@
 @import "base/grid";
 @import "base/typography";
 @import "base/icons";
+@import "base/accessibility";
 
 // SNIPPETS
 @import "snippets/footer";
