Accessiblity: Added various focus events, styling and accessibility tags

--- a/assets/src/sass/components/_button.scss
+++ b/assets/src/sass/components/_button.scss
@@ -56,7 +56,8 @@
   &:focus {
     box-shadow: none;
     border-color: $puerto_rico;
-    outline: 0;
+    
+    text-decoration: none;
   }
 
   &--green {
