--- a/assets/src/sass/components/_link.scss
+++ b/assets/src/sass/components/_link.scss
@@ -62,4 +62,11 @@
             line-height: 1.625rem;
         }
     }
+
+    &:focus,
+    &:hover {
+        &:after {
+            background-color: transparent;
+        }
+    }
 }
