--- a/assets/src/sass/components/_pod.scss
+++ b/assets/src/sass/components/_pod.scss
@@ -21,6 +21,12 @@
             display: flex;
             align-items: center;
         }
+
+        &:focus {
+            .pod__image img {
+                border-color: $puerto_rico;
+            }
+        }
     }
 
     &__title {
