--- a/assets/src/sass/components/_title-card.scss
+++ b/assets/src/sass/components/_title-card.scss
@@ -102,6 +102,10 @@
             &:last-child {
                 margin-right: 0;
             }
+
+            &:focus {
+                color: $puerto_rico;
+            }
         }
     }
 
