--- a/assets/src/sass/base/_typography.scss
+++ b/assets/src/sass/base/_typography.scss
@@ -175,11 +175,15 @@ h4, .h4 {
 /* [9] */
 a {
   color: $elm;
-  outline: 0;
+  
   cursor: pointer;
 
   &:hover {
     text-decoration: none;
+  }
+
+  &:focus {
+    text-decoration: underline;
   }
 
   // Hide all print triggers on devices
