--- a/assets/src/sass/components/_breadcrumbs.scss
+++ b/assets/src/sass/components/_breadcrumbs.scss
@@ -30,5 +30,14 @@
             height: 1px;
             background-color: $jungle_green;
         }
+
+        &:hover,
+        &:focus {
+            text-decoration: none;
+            
+            &:after {
+                background-color: transparent;
+            }
+        }
     }
 }
