Updated searchMap somcponent

--- a/assets/src/sass/components/_link.scss
+++ b/assets/src/sass/components/_link.scss
@@ -65,6 +65,8 @@
 
     &:focus,
     &:hover {
+        text-decoration: none;
+        
         &:after {
             background-color: transparent;
         }
