--- a/assets/src/sass/app.scss
+++ b/assets/src/sass/app.scss
@@ -23,6 +23,7 @@
 @import "components/button";
 @import "components/breadcrumbs";
 @import "components/card";
+@import "components/cta";
 @import "components/hero";
 @import "components/link";
 @import "components/map";
