Added BETA banner and reworked feedback module to make less specific to a page

--- a/assets/src/sass/app.scss
+++ b/assets/src/sass/app.scss
@@ -20,6 +20,7 @@
 
 // COMPONENTS
 @import "components/accordion";
+@import "components/banner";
 @import "components/button";
 @import "components/breadcrumbs";
 @import "components/card";
