--- a/assets/src/sass/components/_breadcrumbs.scss
+++ b/assets/src/sass/components/_breadcrumbs.scss
@@ -3,6 +3,7 @@
 .breadcrumbs {
     font-size: 0.875rem;
     line-height: 1.625rem;
+    margin-top: $base-margin*1;
 
     &__crumb {
         position: relative;
