Various UI tweaks

--- a/assets/src/sass/base/_colors.scss
+++ b/assets/src/sass/base/_colors.scss
@@ -1,6 +1,7 @@
 /* VARIABLES */
 
 // Colors
+$pure_white:      rgba(255, 255, 255, 1);
 $white:           rgba(253, 253, 253, 1);
 $black:           rgba(45, 45, 45, 1);
 $gray:            rgba(150, 150, 150, 1);
