Added a compact view for search results

--- a/assets/src/sass/base/_typography.scss
+++ b/assets/src/sass/base/_typography.scss
@@ -172,6 +172,14 @@ h4, .h4 {
   color: $dusty_gray;
 }
 
+.color-black {
+  color: $black;
+}
+
+.color-green {
+  color: $jungle_green;
+}
+
 /* [9] */
 a {
   color: $elm;
