--- a/assets/src/sass/components/_button.scss
+++ b/assets/src/sass/components/_button.scss
@@ -35,6 +35,16 @@
     }
   }
 
+  &--row {
+    
+    display: block;
+
+    @include breakpoint($break_tablet) {
+      display: inline-block;
+    }
+
+  }
+
   &--icon-before {
     i {
       margin-left: 0 !important;
