--- a/assets/src/sass/base/_grid.scss
+++ b/assets/src/sass/base/_grid.scss
@@ -125,6 +125,12 @@ body {
   &--no-space {
     justify-content: flex-start;
   }
+
+  // Horizontal align left
+  &--left {
+    justify-content: flex-start;
+  }
+
 }
 
 .flex-col {
