Wider layout for search form

--- a/assets/src/sass/snippets/_section.scss
+++ b/assets/src/sass/snippets/_section.scss
@@ -110,6 +110,7 @@
 
     &--home {
       margin-top: $base-margin*4;
+      padding: $base-margin*7 0 $base-margin*4 0;
     }
 
     &.section--reduce-padding {
