--- a/assets/src/sass/forms/base.scss
+++ b/assets/src/sass/forms/base.scss
@@ -31,6 +31,11 @@ form,
   }
 }
 
+.section--header--home .form--search {
+  max-width: 800px;
+  padding-bottom: $base-margin*2.5;
+}
+
 // LABEL STYLE
 label {
   display: block;
